--- a/_includes/comments.html
+++ b/_includes/comments.html
@@ -12,6 +12,7 @@
       var disqus_identifier = '{{ page.id }}';
       var disqus_title = '{{ page.title }}';
       var disqus_url = '{{ site.url }}{{ post.url }}';
+      console.log("Here is my disqus URL:  " + disqus_url)
       /*var disqus_developer = 1;*/
 
       (function() {
