--- a/_includes/comments.html
+++ b/_includes/comments.html
@@ -11,9 +11,9 @@
       var disqus_shortname = '{{ site.disqus_shortname }}';
       var disqus_identifier = '{{ page.id }}';
       var disqus_title = '{{ page.title }}';
-      var disqus_url = '{{ site.url }}{{ page.url }}';
+      var disqus_url = '{{site.url}}{{ page.url | prepend: site.baseurl }}';
       // var disqus_url = '{{ site.url }}{{ post.url }}';
-      console.log("Nothing???? {{ site.url }} {{post.url}}");
+      console.log("Nothing???? {{site.url}}{{ page.url | prepend: site.baseurl }}");
       /*var disqus_developer = 1;*/
 
       (function() {
