url for comments disgus

--- a/_includes/comments.html
+++ b/_includes/comments.html
@@ -13,16 +13,18 @@
       var disqus_identifier = '{{ page.id }}';
       var disqus_title = '{{ page.title }}';
       console.log("I am loading2");
+      var disqus_url = '{{site.url}}{{ post.url | prepend: site.baseurl }}';
 
-      var disqus_url = '{{site.url}}{{ page.url | prepend: site.baseurl }}';
-      console.log("Nothing???? {{site.url}}{{ page.url | prepend: site.baseurl }}");
-      /*var disqus_developer = 1;*/
+      console.log("Nothing???? {{site.url}}{{ post.url | prepend: site.baseurl }}");
+      /* var disqus_developer = 1; */
 
       (function() {
           var dsq = document.createElement('script'); dsq.type = 'text/javascript'; dsq.async = true;
           dsq.src = '//' + disqus_shortname + '.disqus.com/embed.js';
           (document.getElementsByTagName('head')[0] || document.getElementsByTagName('body')[0]).appendChild(dsq);
       })();
+
+      
     </script>
 
     <noscript>
