updated blog posts

--- a/_includes/comments.html
+++ b/_includes/comments.html
@@ -8,14 +8,14 @@
     <div id="disqus_thread"></div>
 
     <script type="text/javascript">
-      console.log("I am loading");
       var disqus_shortname = '{{ site.disqus_shortname }}';
       var disqus_identifier = '{{ page.id }}';
       var disqus_title = '{{ page.title }}';
-      console.log("I am loading2");
+      /* for github pages */
       var disqus_url = '{{site.url}}{{ post.url | prepend: site.baseurl }}';
-
-      console.log("Nothing???? {{site.url}}{{ post.url | prepend: site.baseurl }}");
+      
+      /* for regular sites */ 
+      /* var disqus_url = '{{site.url}}{{ post.url }}'; */ 
       /* var disqus_developer = 1; */
 
       (function() {
