--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -2,8 +2,8 @@
   <div class="container">
 
     {% include social-icons.html %}
-
-    <small>&copy; {{ site.time | date: '%Y' }} All rights reserved. Made with <a href="http://jekyllrb.com" target="_blank">Jekyll</a> and <i class="icon icon-heart"></i></small>
-    <small>by <a href="http://nandomoreira.me" target="_blank">nandomoreira.me</a></small>
+    <small><a href="http://numy.io" target="_blank">Numy LLC.</a></small>
+    <small>&copy; {{ site.time | date: '%Y' }} All rights reserved. Made with <a href="http://jekyllrb.com" target="_blank">Jekyll</a>.<i class="icon icon-heart"></i></small>
+    <small>Inspired by a few sources.</small>
   </div>
 </footer>
