--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -15,8 +15,8 @@ slug: single
 
     {{ content }}
 
-    <aside class="share">
-
+   <aside class="share">
+   
       <span>Share this: </span>
 
       <a href="http://twitter.com/share?text={{page.title}}&amp;url={{site.url}}{{ page.url | prepend: site.baseurl }}&amp;hashtags=web,dev,blog,soudev&amp;via=nandomoreirame"
@@ -27,8 +27,12 @@ slug: single
       <a href="https://www.facebook.com/sharer/sharer.php?u={{site.url}}{{ page.url | prepend: site.baseurl }}"
       onclick="window.open(this.href, 'facebook-share','width=580,height=296');return false;">
         <i class="fa fa-facebook-square"></i>
-      </a>
 
+      <a href="https://www.linkedin.com/shareArticle?mini=true&url={{site.url}}{{ page.url | prepend: site.baseurl }}"
+      onclick="window.open(this.href, 'linkedin-share','width=580,height=296');return false;">
+        <i class="fa fa-linkedin-square"></i>
+      </a>
+    
     </aside>
 
     {% include comments.html %}
